<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/snackbar_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default1"
    tools:context=".LockScreen">

    <TextView
        android:id="@+id/tvScreenLock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/tvLockScreenMsg"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btn"
        android:text="@string/tvLSFive"
        app:cornerRadius="20dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvScreenLock" />

    <Button
        android:id="@+id/btnTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btn"
        android:textColor="@color/black"
        android:text="@string/tvLSTwo"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnFive"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnEight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btn"
        android:textColor="@color/black"
        android:text="@string/tvLSEight"
        app:cornerRadius="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFive" />

    <Button
        android:id="@+id/btnZero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btn"
        android:textColor="@color/black"
        android:text="@string/tvLSZero"
        app:cornerRadius="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEight" />

    <Button
        android:id="@+id/btnOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/btn"
        android:textColor="@color/black"
        android:text="@string/tvLSOne"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@id/btnFour"
        app:layout_constraintEnd_toStartOf="@id/btnTwo"
        app:layout_constraintRight_toRightOf="@id/btnTwo" />

    <Button
        android:id="@+id/btnFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btn"
        android:textColor="@color/black"
        android:text="@string/tvLSFour"
        app:cornerRadius="20dp"
        app:layout_constraintRight_toLeftOf="@id/btnFive"
        app:layout_constraintTop_toTopOf="@id/btnFive" />

    <Button
        android:id="@+id/btnSeven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btn"
        android:textColor="@color/black"
        android:text="@string/tvLSSeven"
        app:cornerRadius="20dp"
        app:layout_constraintRight_toLeftOf="@id/btnEight"
        app:layout_constraintTop_toTopOf="@id/btnEight" />

    <Button
        android:id="@+id/btnThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/btn"
        android:textColor="@color/black"
        android:text="@string/tvLSThree"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@id/btnSix"
        app:layout_constraintLeft_toLeftOf="@id/btnTwo"
        app:layout_constraintStart_toEndOf="@+id/btnTwo" />

    <Button
        android:id="@+id/btnSix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btn"
        android:textColor="@color/black"
        android:text="@string/tvLSSix"
        app:cornerRadius="20dp"
        app:layout_constraintLeft_toRightOf="@id/btnFive"
        app:layout_constraintTop_toTopOf="@id/btnFive" />

    <Button
        android:id="@+id/btnNine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btn"
        android:textColor="@color/black"
        android:text="@string/tvLSNine"
        app:cornerRadius="20dp"
        app:layout_constraintLeft_toRightOf="@id/btnEight"
        app:layout_constraintTop_toTopOf="@id/btnEight" />

    <Button
        android:id="@+id/btnbackSpace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btn"
        android:textColor="@color/black"
        app:cornerRadius="20dp"
        android:text="Clear"
        app:layout_constraintLeft_toRightOf="@id/btnZero"
        app:layout_constraintTop_toBottomOf="@id/btnNine" />

    <EditText
        android:id="@+id/edPWd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:autofillHints="Password"
        android:backgroundTint="@color/default1"
        android:enabled="false"
        android:hint="Enter your passcode"
        android:inputType="textPassword"
        android:maxLength="4"
        android:textAlignment="center"
        android:textColor="@color/cardview_dark_background"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/btnTwo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvScreenLock" />

</androidx.constraintlayout.widget.ConstraintLayout>